--- a/css/style.css
+++ b/css/style.css
@@ -278,27 +278,44 @@ footer a {
         
     }
     header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         padding: 0px;
     }
     header div img{
-        width: 12%;
+        padding-left: 30px;
+        width: 35%;
+    }
+    header div{
+
+        font-size: 1em;
+        display: flex;
+        vertical-align: middle;
+    }
+    header div p {
+        padding-left: 20px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        margin-top: 20px;
+    }
+    nav{
+        align-items: flex-end;
+        margin-left: auto;
+    }
+    nav ul li {
         display: inline;
     }
-    header div p{
-        font-size: 1.1em;
-        display: inline;
-    }
-    header li{
-        display: inline;
+    nav ul{
+        padding-right: 30px;
     }
     main{
+        padding: 20px;
         line-height: 2em;
     }
 } 
 @media print {
-    body {
-        
+    body {       
         font-size: 1.8rem;
-        color: red;
     }
 }
